--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 altair==5.1.1
+ansi2html==1.8.0
 attrs==23.1.0
 backcall==0.2.0
 blinker==1.6.2
@@ -9,8 +10,13 @@ click==8.1.7
 colorama==0.4.6
 contourpy==1.1.0
 cycler==0.11.0
+dash==2.13.0
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
 distlib==0.3.7
 executing==1.2.0
+Flask==2.2.5
 flatbuffers==23.5.26
 fonttools==4.42.1
 gitdb==4.0.10
@@ -18,6 +24,7 @@ GitPython==3.1.33
 idna==3.4
 importlib-metadata==6.8.0
 imutils==0.5.4
+itsdangerous==2.1.2
 Jinja2==3.1.2
 joblib==1.3.2
 jsonschema==4.19.0
@@ -30,6 +37,7 @@ matplotlib==3.7.2
 mdurl==0.1.2
 mpld3==0.5.9
 ncat==0.1.1
+nest-asyncio==1.5.7
 numpy==1.24.3
 oauthlib==3.2.2
 packaging==23.1
@@ -38,10 +46,12 @@ parso==0.8.3
 pickleshare==0.7.5
 Pillow==9.5.0
 platformdirs==3.9.1
+plotly==5.16.1
 prompt-toolkit==3.0.39
 protobuf==4.24.2
 psutil==5.9.5
 psycopg2==2.9.7
+psycopg2-binary==2.9.7
 pure-eval==0.2.2
 py4j==0.10.9.7
 pyarrow==13.0.0
@@ -59,6 +69,7 @@ pywin32==306
 pyzmq==25.1.0
 referencing==0.30.2
 requests==2.31.0
+retrying==1.3.4
 rich==13.5.2
 rpds-py==0.10.0
 scikit-learn==1.3.0
@@ -84,6 +95,6 @@ urllib3==1.26.16
 validators==0.21.2
 watchdog==3.0.0
 wcwidth==0.2.6
-Werkzeug==2.3.7
+Werkzeug==2.2.3
 wrapt==1.15.0
 zipp==3.16.2
